--- a/070 爬楼梯.md
+++ b/070 爬楼梯.md
@@ -50,14 +50,10 @@
 即，该问题可以转换为斐波那契数列问题。
 
 <b>第一种：利用递归</b>
-```c
-public class Solution {
-    public int ClimbStairs(int n) {
-        if (n <= 2)
-            return n;
-
-        return ClimbStairs(n - 1) + ClimbStairs(n - 2);        
-    }
+```js
+var climbStairs = function(n) {
+  if (n<=2) return n;
+  return climbStairs(n-1) + climbStairs(n-2)
 }
 ```
 
@@ -65,29 +61,18 @@ public class Solution {
 
 <b>第二种：利用循环</b>
 
-- 状态：通过
-- 45 / 45 个通过测试用例
-- 执行用时: 52 ms, 在所有 C# 提交中击败了 97.87% 的用户
-- 内存消耗: 13.7 MB, 在所有 C# 提交中击败了 5.98% 的用户
-
-```c
-public class Solution {
-    public int ClimbStairs(int n) {
-        if (n <= 2)
-            return n;
-
-        int first = 1;
-        int second = 2;
-        int result = 0;
-
-        for (int i = 3; i <= n; i++)
-        {
-            result = first + second;
-            first = second;
-            second = result;
-        }
-        return result;        
-    }
+```js
+var climbStairs = function(n) {
+  if(n<=2) return n;
+  let first = 1;
+  let second = 2;
+  let result = 0;
+  for (let i=3;i<=n;i++){
+    result = first + second;
+    first = second;
+    second = result;
+  }
+  return result;
 }
 ```
-
+<b>第三种：利用dp</b>
